Add tests, refactor