@@ -1,14 +1,8 @@
 package ua.foxminded.tasks.university_cms.controller;
 
-import static org.junit.Assert.fail;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.doNothing;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.*;
 
-import java.util.HashMap;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -24,9 +18,11 @@ import org.springframework.test.web.servlet.result.MockMvcResultMatchers;
 
 import ua.foxminded.tasks.university_cms.entity.Course;
 import ua.foxminded.tasks.university_cms.entity.Group;
-import ua.foxminded.tasks.university_cms.entity.GroupCourse;
 import ua.foxminded.tasks.university_cms.entity.Teacher;
 import ua.foxminded.tasks.university_cms.entity.TeacherCourse;
+import ua.foxminded.tasks.university_cms.form.CourseFormData;
+import ua.foxminded.tasks.university_cms.form.CoursesData;
+import ua.foxminded.tasks.university_cms.form.EditGroupsFormData;
 import ua.foxminded.tasks.university_cms.service.CourseService;
 import ua.foxminded.tasks.university_cms.service.DataGeneratorService;
 import ua.foxminded.tasks.university_cms.service.GroupCourseService;
@@ -61,6 +57,8 @@ class CourseControllerTest {
 	@Test
 	@WithMockUser(username = "admin", roles = "ADMIN")
 	void showCourses_coursesPageRequest_returnsCoursesView() throws Exception {
+		
+		when(courseService.prepareCoursesData()).thenReturn(new CoursesData());
 		mockMvc.perform(MockMvcRequestBuilders.get("/courses"))
 			   .andExpect(MockMvcResultMatchers.status().isOk())
 			   .andExpect(MockMvcResultMatchers.view().name("courses"));
@@ -81,28 +79,15 @@ class CourseControllerTest {
 		
 		String courseName = "Course_name";
 		Long teacherId = 10L;
-		Long id = 1L;
-		Course newCourse = new Course();
-		Teacher teacher = new Teacher("First_name", "Last_Name");
-		Course course = new Course(id, "Course_name");
 
-		doNothing().when(courseService).save(any(Course.class));
-		when(teacherService.findById(teacherId)).thenReturn(teacher);
-		when(courseService.findById(newCourse.getId())).thenReturn(course);
-		doNothing().when(teacherCourseService).save(any(TeacherCourse.class));
+		doNothing().when(courseService).saveCourse(courseName, teacherId);
 		
         mockMvc.perform(MockMvcRequestBuilders.post("/add-course")
         									  .with(SecurityMockMvcRequestPostProcessors.csrf())
 				  							  .param("courseName", courseName)
 				  							  .param("teacherId", teacherId.toString()))
         	.andExpect(MockMvcResultMatchers.status().is3xxRedirection())
-        	.andExpect(MockMvcResultMatchers.header().string("Location", "/courses"));
-        
-        verify(courseService, times(1)).save(any(Course.class));
-        verify(teacherService, times(1)).findById(teacherId);
-        verify(courseService, times(1)).findById(newCourse.getId());
-        verify(teacherCourseService, times(1)).save(any(TeacherCourse.class));
-			
+        	.andExpect(MockMvcResultMatchers.header().string("Location", "/courses"));		
 	}
 	
 	@Test
@@ -110,13 +95,18 @@ class CourseControllerTest {
 	void showCourseForm_coursePageRequest_returnsCourseView() throws Exception {
 
 		Long id = 10L;
-		Course course = new Course();
+		Course course = new Course(10L, "Course_Name");
 		Teacher teacher = new Teacher();
-		Group group = new Group();
-		when(courseService.findById(id)).thenReturn(course);
-		when(teacherService.findByCourse(course)).thenReturn(teacher);
-		when(groupService.findByCourse(course)).thenReturn(List.of(group));
+		TeacherCourse teacherCourse = new TeacherCourse(teacher, course);
+		List<Group> groups = Collections.emptyList();
+		List<Teacher> teachers = Collections.emptyList();
+		Map<Course, List<Group>> courseGroupsMap = Collections.emptyMap();
 		
+		when(courseService.prepareCourseFormData(id)).thenReturn(new CourseFormData(teacherCourse,
+																					groups,
+																					teachers,
+																					courseGroupsMap));
+
 		mockMvc.perform(MockMvcRequestBuilders.get("/course/{id}", id))
 	   	   .andExpect(MockMvcResultMatchers.status().isOk())
 	   	   .andExpect(MockMvcResultMatchers.view().name("course"));
@@ -144,17 +134,11 @@ class CourseControllerTest {
 	@WithMockUser(username = "admin", roles = "ADMIN")
 	void updateTeacher_ValidInput_CalledMethodsAndRedirectsToCoursesPage() throws Exception {
 
-		Long id = 1L;
 		Teacher teacher = new Teacher(1L, "First_Name", "Last_Name");
 		Course course = new Course(1L, "Course_Name");
-		TeacherCourse teacherCourse = new TeacherCourse();
-	    teacherCourse.setTeacher(teacher);
-	    teacherCourse.setCourse(course);
+		TeacherCourse teacherCourse = new TeacherCourse(teacher, course);
 
-		when(courseService.findById(id)).thenReturn(course);
-		when(teacherCourseService.findByCourseId(id)).thenReturn(teacherCourse);
-		doNothing().when(teacherCourseService).delete(any(TeacherCourse.class));
-		doNothing().when(teacherCourseService).save(any(TeacherCourse.class));
+		doNothing().when(courseService).updateTeacherCourse(teacherCourse);
 		
     	mockMvc.perform(MockMvcRequestBuilders.post("/update-teacher")
     			.with(SecurityMockMvcRequestPostProcessors.csrf())
@@ -162,9 +146,6 @@ class CourseControllerTest {
  	   			.andExpect(MockMvcResultMatchers.status().is3xxRedirection())
  	   			.andExpect(MockMvcResultMatchers.header().string("Location", "/courses"));
     	
-        verify(teacherCourseService, times(1)).delete(any(TeacherCourse.class)); 
-        verify(teacherCourseService, times(1)).save(any(TeacherCourse.class));
-
 	}
 	
 	@Test
@@ -172,15 +153,14 @@ class CourseControllerTest {
 	void showEditGroupsForm_EditGroupsPageRequest_ShowEditGroupsView() throws Exception {
 		
 		Long id = 10L;
-		Group group = new Group();
 		Course course = new Course(id, "Course_Name");
-		Map<Long, List<Group>> courseGroupsMap = new HashMap<>();
-		courseGroupsMap.put(id, List.of(group));
+		Map<Long, List<Group>> courseGroupsMap = Collections.emptyMap();
+		List<Group> filteredGroups = Collections.emptyList();
 		
-		when(groupService.findAll()).thenReturn(List.of(group));
-		when(courseService.findById(id)).thenReturn(course);
-		when(groupService.findByCourse(course)).thenReturn(List.of(group));
-		
+		when(courseService.prepareEditGroupsFormData(id)).thenReturn(new EditGroupsFormData(course,
+																							courseGroupsMap,
+																							filteredGroups));
+
 		mockMvc.perform(MockMvcRequestBuilders.get("/edit-groups/{id}", id))
 	   	   .andExpect(MockMvcResultMatchers.status().isOk())
 	   	   .andExpect(MockMvcResultMatchers.view().name("edit-groups"));
@@ -192,12 +172,8 @@ class CourseControllerTest {
 		
 		Long groupId = 1L;
 		Long courseId = 1L;
-		Group group = new Group(groupId, "Group_Name", 10L);
-		Course course = new Course(courseId, "Course_Name");
-		
-		when(groupService.findById(groupId)).thenReturn(group);
-		when(courseService.findById(courseId)).thenReturn(course);
-		doNothing().when(groupCourseService).save(any(GroupCourse.class));
+
+		doNothing().when(courseService).updateGroups(groupId, courseId);
 		
     	mockMvc.perform(MockMvcRequestBuilders.post("/update-groups")
     			.with(SecurityMockMvcRequestPostProcessors.csrf())
@@ -206,7 +182,7 @@ class CourseControllerTest {
  	   			.andExpect(MockMvcResultMatchers.status().is3xxRedirection())
  	   			.andExpect(MockMvcResultMatchers.header().string("Location", "/courses"));
     	
-        verify(groupCourseService, times(1)).save(any(GroupCourse.class));
+
 	}
 	
 	@Test
@@ -215,12 +191,8 @@ class CourseControllerTest {
 		
 		Long groupId = 1L;
 		Long courseId = 2L;
-		Group group = new Group(groupId, "Group_Name", 10L);
-		Course course = new Course(courseId, "Course_Name");
-		
-		when(groupService.findById(groupId)).thenReturn(group);
-		when(courseService.findById(courseId)).thenReturn(course);
-		doNothing().when(groupCourseService).delete(any(GroupCourse.class));
+
+		doNothing().when(courseService).deleteGroup(groupId, courseId);
 		
 		mockMvc.perform(MockMvcRequestBuilders.get("/delete-group/{groupId}", groupId)
 					.with(SecurityMockMvcRequestPostProcessors.csrf())
@@ -234,24 +206,13 @@ class CourseControllerTest {
 	void deleteCourse_ValidInput_CalledMethodsAndRedirectsToCoursesPage() throws Exception {
 		
 		Long id = 10L;
-    	Teacher teacher = new Teacher();
-    	Course course = new Course();
-    	Group group = new Group();
-    	TeacherCourse teacherCourse = new TeacherCourse(teacher, course);
-    	GroupCourse groupCourse = new GroupCourse(group, course);
-    	
-    	when(teacherCourseService.findByCourseId(id)).thenReturn(teacherCourse);
-    	when(groupCourseService.findByCourseId(id)).thenReturn(List.of(groupCourse));
-    	doNothing().when(groupCourseService).delete(groupCourse);
-    	doNothing().when(teacherCourseService).delete(teacherCourse);
-    	doNothing().when(courseService).delete(id);
+
+    	doNothing().when(courseService).deleteCourse(id);
     	
     	mockMvc.perform(MockMvcRequestBuilders.get("/delete-course/{id}", id))
         	   .andExpect(MockMvcResultMatchers.status().is3xxRedirection())
         	   .andExpect(MockMvcResultMatchers.header().string("Location", "/courses"));
-    	verify(groupCourseService, times(1)).delete(groupCourse);
-    	verify(teacherCourseService, times(1)).delete(teacherCourse);
-    	verify(courseService, times(1)).delete(id);
+
 	}
 	
 }
